# rgb_depth_camera

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/depth_estimation/: depth_estimation
devel/lib/pkgconfig/: depth_estimation.pc  gazebo_world.pc  vehicle_control.pc  vehicle_description.pc
devel/lib/vehicle_control/: vehicle_control
devel/share/depth_estimation/cmake/: depth_estimationConfig.cmake
devel/share/gazebo_world/cmake/: gazebo_worldConfig.cmake
devel/share/vehicle_control/cmake/: vehicle_controlConfig.cmake
devel/share/vehicle_description/cmake/: vehicle_descriptionConfig.cmake
src/depth_estimation/: CMakeLists.txt  depth_estimation.cpp  package.xml
src/depth_estimation/launch/: depth_camera.launch
src/gazebo_world/: CMakeLists.txt  package.xml
src/gazebo_world/launch/: gazebo_world.launch
src/gazebo_world/worlds/: rrbot.world
src/vehicle_control/: CMakeLists.txt  package.xml  vehicle_control.cpp
src/vehicle_control/config/: vehicle_control.yaml
src/vehicle_control/launch/: vehicle_control.launch
src/vehicle_description/: CMakeLists.txt  package.xml
src/vehicle_description/launch/: vehicle.rviz  vehicle_rviz.launch
src/vehicle_description/urdf/: vehicle.gazebo  vehicle.xacro
