<package>
  <name>gazebo_world</name>
  <version>0.0.1</version>
	<description> This is the Gazebo world file</description>
	<license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
	<maintainer email="liuxiafa@gmail.com">Xiahua Liu</maintainer>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>vehicle_control</run_depend>
  <run_depend>vehicle_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
